--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,10 @@
 <h1>Welcome to Greg's List!</h1>
 
 <h6>(not based off of anything)</h6>
+
+<ul>
+  {{#each model.categories as |category|}}
+    <li>{{#link-to 'category'}} {{category.name}} {{/link-to}}</li>
+  {{/each}}
+
+</ul>
