--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,8 +3,14 @@
 <h6>(not based off of anything)</h6>
 
 <ul>
+  {{#each model.posts as |post|}}
+    <li>{{post.title}} {{post.date}}</li>
+  {{/each}}
+</ul>
+
+<ul>
   {{#each model.categories as |category|}}
-    <li>{{#link-to 'category'}} {{category.name}} {{/link-to}}</li>
+    <li>{{#link-to 'category' category.id}} {{category.name}} {{/link-to}}</li>
   {{/each}}
 
 </ul>
