--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -29,7 +29,7 @@
         {{textarea rows="5" value=body id="body"}}
       </div>
 
-      <button {{action 'save' post}}>Save</button>
+      <button {{action 'save'}}>Save</button>
     </form>
 
 {{else}}
