--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -4,5 +4,7 @@
   <h4>{{post.body}}</h4>
   <img src="{{post.image}}" alt="{{post.title}}">
   <h4>Contact {{post.author}} at {{post.contact}}</h4>
+
+  <button{{ action 'delete' post }}>Delete</button>
 </div>
 <hr>
