add fullTitle computed component

--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,9 +1,9 @@
 <div>
-  <h3>{{post.title}}: {{post.price}}</h3>
+  <h3>{{fullTitle}}</h3>
   <h4>Posted on {{post.date}}</h4>
   <h4>{{post.body}}</h4>
   <img src="{{post.image}}" alt="{{post.title}}">
-  <h4>Contact {{post.author}} at {{post.contact}}</h4>
+  <h4>Contact: {{post.author}} at {{post.contact}}</h4>
 
   <button{{ action 'delete' post }}>Delete</button>
 </div>
